# plataforma-cursos

./: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt
area/: admin.py  models.py  tasks.py  urls.py  views.py
area/migrations/: 0001_initial.py  0002_course_active.py  0003_lessonprogress.py  0004_lesson_attachment_lesson_content.py  0005_remove_lesson_attachment_lessonmaterial.py  0006_lessoncomment.py  0007_course_kiwify_product_id.py  0008_suportticket.py  0009_alter_suportticket_options_suportticket_status_and_more.py  0010_course_checkout_url.py  0011_course_page_url.py
core/: celery.py  settings.py  urls.py
static/css/: liquid-base.css  login.css  theme_changer.css
static/js/: sortable_curriculum.js
templates/: base.html  course_details.html  dashboard.html  forgot_password.html  login.html  profile.html  settings.html
templates/partials/: _comments_section.html  _drawer.html  _edit_course_modal.html  _edit_lesson_modal.html  _edit_module_modal.html  _lesson_button.html  _lesson_details.html  _manage_curriculum.html  _manage_students.html  _navbar.html  _search_results.html  _suport_modal.html  _theme_changer.html  _ticket_detail.html  _tickets_list.html  _toast_sucesso.html
user/: admin.py  models.py  tasks.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_customuser_phone.py
